tests/paczka1/fuzzy1/78261042.err
Error in line 20: azbZEfagX A671 30,6
Error in line 30: azbZEfagX A820 53,5
Error in line 36: uPSrhRhdi A820 10,8
Error in line 33: azbZEfagX S501 44,6
